// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/rollup-utils PackageConfig Matches Snapshopt 1`] = `
Object {
  "external": Array [
    "@babel/core",
    "@babel/preset-env",
    "@rollup/plugin-babel",
    "@rollup/plugin-node-resolve",
    "builtin-modules",
    "camelcase",
    "rollup",
    "assert",
    "async_hooks",
    "buffer",
    "child_process",
    "cluster",
    "console",
    "constants",
    "crypto",
    "dgram",
    "dns",
    "domain",
    "events",
    "fs",
    "http",
    "http2",
    "https",
    "inspector",
    "module",
    "net",
    "os",
    "path",
    "perf_hooks",
    "process",
    "punycode",
    "querystring",
    "readline",
    "repl",
    "stream",
    "string_decoder",
    "timers",
    "tls",
    "trace_events",
    "tty",
    "url",
    "util",
    "v8",
    "vm",
    "zlib",
  ],
  "input": "dist/index.js",
  "output": Array [
    Object {
      "file": "dist/index.bundle.js",
      "format": "cjs",
      "globals": Object {
        "@babel/core": "@babel/core",
        "@babel/preset-env": "@babel/presetEnv",
        "@rollup/plugin-babel": "@rollup/pluginBabel",
        "@rollup/plugin-node-resolve": "@rollup/pluginNodeResolve",
        "assert": "assert",
        "async_hooks": "asyncHooks",
        "buffer": "buffer",
        "builtin-modules": "builtinModules",
        "camelcase": "camelcase",
        "child_process": "childProcess",
        "cluster": "cluster",
        "console": "console",
        "constants": "constants",
        "crypto": "crypto",
        "dgram": "dgram",
        "dns": "dns",
        "domain": "domain",
        "events": "events",
        "fs": "fs",
        "http": "http",
        "http2": "http2",
        "https": "https",
        "inspector": "inspector",
        "module": "module",
        "net": "net",
        "os": "os",
        "path": "path",
        "perf_hooks": "perfHooks",
        "process": "process",
        "punycode": "punycode",
        "querystring": "querystring",
        "readline": "readline",
        "repl": "repl",
        "rollup": "rollup",
        "stream": "stream",
        "string_decoder": "stringDecoder",
        "timers": "timers",
        "tls": "tls",
        "trace_events": "traceEvents",
        "tty": "tty",
        "url": "url",
        "util": "util",
        "v8": "v8",
        "vm": "vm",
        "zlib": "zlib",
      },
      "name": "@almaclaine/rollupConfig",
    },
  ],
  "plugins": Array [
    Object {
      "buildStart": [Function],
      "generateBundle": [Function],
      "getPackageInfoForId": [Function],
      "load": [Function],
      "name": "node-resolve",
      "resolveId": [Function],
    },
  ],
}
`;

exports[`utils/rollup-utils ScriptConfig Matches Snapshopt 1`] = `
Object {
  "external": Array [
    "@babel/core",
    "@babel/preset-env",
    "@rollup/plugin-babel",
    "@rollup/plugin-node-resolve",
    "builtin-modules",
    "camelcase",
    "rollup",
    "assert",
    "async_hooks",
    "buffer",
    "child_process",
    "cluster",
    "console",
    "constants",
    "crypto",
    "dgram",
    "dns",
    "domain",
    "events",
    "fs",
    "http",
    "http2",
    "https",
    "inspector",
    "module",
    "net",
    "os",
    "path",
    "perf_hooks",
    "process",
    "punycode",
    "querystring",
    "readline",
    "repl",
    "stream",
    "string_decoder",
    "timers",
    "tls",
    "trace_events",
    "tty",
    "url",
    "util",
    "v8",
    "vm",
    "zlib",
  ],
  "input": "dist/exec.js",
  "output": Array [
    Object {
      "file": "dist/index.bundle.js",
      "format": "cjs",
      "globals": Object {
        "@babel/core": "@babel/core",
        "@babel/preset-env": "@babel/presetEnv",
        "@rollup/plugin-babel": "@rollup/pluginBabel",
        "@rollup/plugin-node-resolve": "@rollup/pluginNodeResolve",
        "assert": "assert",
        "async_hooks": "asyncHooks",
        "buffer": "buffer",
        "builtin-modules": "builtinModules",
        "camelcase": "camelcase",
        "child_process": "childProcess",
        "cluster": "cluster",
        "console": "console",
        "constants": "constants",
        "crypto": "crypto",
        "dgram": "dgram",
        "dns": "dns",
        "domain": "domain",
        "events": "events",
        "fs": "fs",
        "http": "http",
        "http2": "http2",
        "https": "https",
        "inspector": "inspector",
        "module": "module",
        "net": "net",
        "os": "os",
        "path": "path",
        "perf_hooks": "perfHooks",
        "process": "process",
        "punycode": "punycode",
        "querystring": "querystring",
        "readline": "readline",
        "repl": "repl",
        "rollup": "rollup",
        "stream": "stream",
        "string_decoder": "stringDecoder",
        "timers": "timers",
        "tls": "tls",
        "trace_events": "traceEvents",
        "tty": "tty",
        "url": "url",
        "util": "util",
        "v8": "v8",
        "vm": "vm",
        "zlib": "zlib",
      },
      "name": "@almaclaine/rollupConfig",
    },
    Object {
      "file": "dist/exec.bundle.js",
      "format": "cjs",
      "globals": Object {
        "@babel/core": "@babel/core",
        "@babel/preset-env": "@babel/presetEnv",
        "@rollup/plugin-babel": "@rollup/pluginBabel",
        "@rollup/plugin-node-resolve": "@rollup/pluginNodeResolve",
        "assert": "assert",
        "async_hooks": "asyncHooks",
        "buffer": "buffer",
        "builtin-modules": "builtinModules",
        "camelcase": "camelcase",
        "child_process": "childProcess",
        "cluster": "cluster",
        "console": "console",
        "constants": "constants",
        "crypto": "crypto",
        "dgram": "dgram",
        "dns": "dns",
        "domain": "domain",
        "events": "events",
        "fs": "fs",
        "http": "http",
        "http2": "http2",
        "https": "https",
        "inspector": "inspector",
        "module": "module",
        "net": "net",
        "os": "os",
        "path": "path",
        "perf_hooks": "perfHooks",
        "process": "process",
        "punycode": "punycode",
        "querystring": "querystring",
        "readline": "readline",
        "repl": "repl",
        "rollup": "rollup",
        "stream": "stream",
        "string_decoder": "stringDecoder",
        "timers": "timers",
        "tls": "tls",
        "trace_events": "traceEvents",
        "tty": "tty",
        "url": "url",
        "util": "util",
        "v8": "v8",
        "vm": "vm",
        "zlib": "zlib",
      },
      "name": "@almaclaine/rollupConfig",
    },
  ],
  "plugins": Array [
    Object {
      "buildStart": [Function],
      "generateBundle": [Function],
      "getPackageInfoForId": [Function],
      "load": [Function],
      "name": "node-resolve",
      "resolveId": [Function],
    },
  ],
}
`;
